--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>The Universe/title>
+  <title>The Universe</title>
   <meta name="viewport" content="width=device=width,initial-scale=1">
 </head>
 <body>
@@ -19,9 +19,13 @@
       <li><a href="#comets">Comets</a></li>
     </ul>
   </nav>
+</header>
+<figure>
    <img src="images/banner.svg" alt="logo">
-   <h2>The Solar System-our home in the stars</h2>
+   <figcaption>The Solar System-our home in the stars</figcaption>
+ </figure>
+    <footer>
    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
-  </header>
+ </footer>
 </body>
 </html>
