--- a/index.html
+++ b/index.html
@@ -6,26 +6,28 @@
   <meta name="viewport" content="width=device=width,initial-scale=1">
 </head>
 <body>
-  <header>
-    <img src="images/logo.svg" alt="logo">
-    <h1>The Solar System</h1>
-    <nav>
-    <ul>
-      <li><a href="#stars">Stars</a></li>
-      <li><a href="#terrestrialplanets">Terrestrial planets</a></li>
-      <li><a href="#gasgiants">Gas Giants</a></li>
-      <li><a href="#dwarfplanets">Dwarf Planets</a></li>
-      <li><a href="#asteroids">Asteroids</a></li>
-      <li><a href="#comets">Comets</a></li>
-    </ul>
-  </nav>
-</header>
-<figure>
-   <img src="images/banner.svg" alt="logo">
-   <figcaption>The Solar System-our home in the stars</figcaption>
- </figure>
+  <main>
+    <header>
+      <img src="images/logo.svg" alt="logo">
+      <h1>The Solar System</h1>
+      <nav>
+        <ul>
+          <li><a href="#stars">Stars</a></li>
+          <li><a href="#terrestrialplanets">Terrestrial planets</a></li>
+          <li><a href="#gasgiants">Gas Giants</a></li>
+          <li><a href="#dwarfplanets">Dwarf Planets</a></li>
+          <li><a href="#asteroids">Asteroids</a></li>
+          <li><a href="#comets">Comets</a></li>
+        </ul>
+      </nav>
+    </header>
+    <figure>
+      <img src="images/banner.svg" alt="logo">
+      <figcaption>The Solar System-our home in the stars</figcaption>
+    </figure>
     <footer>
-   <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
- </footer>
+      <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+    </footer>
+    </main>
 </body>
 </html>
