Delete capital letters

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul>
           <li><a href="#stars">Stars</a></li>
           <li><a href="#terrestrialplanets">Terrestrial planets</a></li>
-          <li><a href="#gasgiants">Gas Giants</a></li>
-          <li><a href="#dwarfplanets">Dwarf Planets</a></li>
+          <li><a href="#gasgiants">Gas giants</a></li>
+          <li><a href="#dwarfplanets">Dwarf planets</a></li>
           <li><a href="#asteroids">Asteroids</a></li>
           <li><a href="#comets">Comets</a></li>
         </ul>
@@ -28,6 +28,6 @@
     <footer>
       <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
     </footer>
-    </main>
+  </main>
 </body>
 </html>
